* Category should be auto selected/checked for a single category - CHANGED
* Output location fieldset's with child elements will only be output if child elements have content - CHANGED
* Import post not showing error for non GD post type - FIXED
* Beaver themer layout not working with GD widgets - FIXED
* Directory map not showing child categories for empty parent category - FIXED

= 2.0.0.65 =
* Jarida theme compatibility for GD page sidebars - FIXED
* Business hours timepicker translation not working on first load - FIXED
* GeneratePress theme not showing correct SEO meta on detail page - FIXED
* Listimia theme shows default page title for GD archive pages - FIXED
* Widget shows logo image even it disabled via package - FIXED
* GD Single Tabs, widget now has option to output head and body separately - ADDED
* Category default image not working when category imported via csv - FIXED
* Jupiter theme GD page sidebars not working - FIXED
* AJAX listings pagination not working is email allowed to show on listings - FIXED
* Newspaper theme sidebar position not working on GD pages - FIXED
* Duplicate image slider id breaks ajax image slider - FIXED
* Helper function to check if a given listing has a custom field - ADDED
* Rank Math SEO plugin compatibility settings - ADDED

= 2.0.0.64 = 
* Beaver Builder content does not work for archive item template - FIXED
* Autocomplete search result selection looses street number for some locations - FIXED
* Option added to add Geocoding API key - ADDED
* Allow to choose Font Awesome pro icons for active Pro subscription - ADDED
* IE displays bg image over listing content - FIXED
* GD Map allows to filter listings by tags - ADDED
* Change country name "Russian Federation" to "Russia" - CHANGED
* Missing required field error may results in JavaScript error - FIXED
* Link in no posts found message redirects to wrong add listing post type page - FIXED
* Listings widget list view not setting as widget checks for empty value - FIXED