@@ -11,6 +11,7 @@
 * Import post not showing error for non GD post type - FIXED
 * Beaver themer layout not working with GD widgets - FIXED
 * Directory map not showing child categories for empty parent category - FIXED
+* If Google maps is disabled then use OpenStreetMap API to get GPS data during import - ADDED
 
 = 2.0.0.65 =
 * Jarida theme compatibility for GD page sidebars - FIXED
